# ratatui-counter-app

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/widgets/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  processes.rs  storage.rs  temperature.rs
